# cs480Mcilwain

./: README.md
FinalProject/: CMakeLists.txt  README.md
FinalProject/assets/: 30DegPlatform.mtl  Barrel2.mtl  DK_Arm_UP.mtl  Floor.mtl  Ladder.mtl  Player.mtl~HEAD  PlayerSprite.mtl~fc52a667343e9af4c0070653fe46c785e8c7c4dc
FinalProject/include/: audio.h  camera.h  engine.h  graphics.h  graphics_headers.h  object.h  shader.h
FinalProject/models/: Ball.mtl  Flipper.mtl
FinalProject/shaders/: frag_shader_phong  vert_shader_phong
FinalProject/src/: audio.cpp  camera.cpp  engine.cpp  graphics.cpp  main.cpp  object.cpp  window.cpp
PA1/include/: graphics.h  object.h  shader.h
PA1/shaders/: GL_FRAG.txt  GL_VERT.txt
PA1/src/: graphics.cpp  object.cpp  shader.cpp
PA10/: CMakeLists.txt  README.md
PA10/CMakeModules/: FindMagick++.cmake
PA10/include/: engine.h  graphics.h  window.h
PA10/models/: Flipper.mtl  FlipperL.mtl  Floor.mtl
PA10/src/: camera.cpp  engine.cpp  graphics.cpp  imgui_impl_opengl3.cpp  main.cpp  object.cpp  window.cpp
PA2/: README.md
PA2/include/: graphics.h  graphics_headers.h  object.h
PA2/shaders/: GL_FRAG.txt
PA2/src/: input.cpp  input.h  object.cpp
PA3/: README.md  makefile
PA3/include/: object.h
PA3/src/: camera.cpp  graphics.cpp  main.cpp  object.cpp  shader.cpp
PA4/: .~lock.README.md#  README.md
PA4/include/: object.h
PA4/src/: graphics.cpp  input.cpp  object.cpp
PA5/: CMakeLists.txt  README.md
PA5/CMakeModules/: Findassimp.cmake
PA5/Models/: board.mtl
PA5/include/: engine.h  graphics.h  object.h
PA5/shaders/: frag_shader
PA5/src/: engine.cpp  graphics.cpp  main.cpp  object.cpp
PA6/: CMakeLists.txt  README.md
PA6/include/: engine.h  graphics.h  graphics_headers.h  object.h
PA6/models/: sphere.mtl
PA6/shaders/: vert_shader
PA6/src/: camera.cpp  engine.cpp  graphics.cpp  main.cpp  object.cpp
PA7/: CMakeLists.txt  README.md
PA7/include/: camera.h  engine.h  graphics.h  graphics_headers.h  object.h  shader.h
PA7/models/: Sphere.mtl  buddha.mtl  ring.mtl
PA7/shaders/: frag_shader  frag_shader_phong  vert_shader  vert_shader_phong
PA7/src/: camera.cpp  engine.cpp  graphics.cpp  main.cpp  object.cpp  (+1 more)
PA8/: CMakeLists.txt  README.md
PA9/: README.md
(+34 files in other folders)
